<resources>
    <string name="标题">标题</string>
    <string name="订单">订单</string>
    <string name="消息">消息</string>
    <string name="我">我</string>
    <string name="韭菜盒子">韭菜盒子</string>
    <string name="暂无菜单信息">暂无菜单信息</string>
    <string name="rmb">￥</string>
    <string name="确认订单">确认订单</string>
    <string name="选择的商品">选择的商品</string>
    <string name="n个">x%d</string>
    <string name="总金额">总金额：</string>
    <string name="确认下单">确认下单</string>
    <string name="服务器异常">服务器异常</string>
    <string name="下单成功">下单成功</string>
    <string name="打印提示">您已经成功下单，是否打印当前订单？</string>
    <string name="打印订单">打印订单</string>
    <string name="取消">取消</string>
    <string name="今日销售">今日销售</string>
    <string name="数量">数量</string>
    <string name="服务器域名设置">服务器域名设置</string>
    <string name="无线投屏设置">无线投屏设置</string>
    <string name="基本信息">基本信息</string>
    <string name="账单">账单</string>
    <string name="菜单管理">菜单管理</string>
    <string name="订单管理">订单管理</string>
    <string name="商品统计">商品统计</string>
    <string name="支出记录">支出记录</string>
    <string name="账号设置">账号设置</string>
    <string name="管理分类">管理分类</string>
    <string name="添加新品">添加新品</string>
    <string name="添加分类">添加分类</string>
    <string name="编辑">编辑</string>
    <string name="删除">删除</string>
    <string name="确定要删除x吗">确定要删除 %s 吗</string>
    <string name="确定删除">确定删除</string>
    <string name="编辑分类">编辑分类</string>
    <string name="分类名称">分类名称</string>
    <string name="请输入分类名称">请输入分类名称</string>
    <string name="子分类信息">子分类信息</string>
    <string name="排序">排序</string>
    <string name="添加子分类">添加子分类</string>
    <string name="请输入排序">请输入排序</string>
    <string name="请输入子分类名称">请输入子分类名称</string>
    <string name="编辑子分类">编辑子分类</string>
    <string name="确定">确定</string>
    <string name="保存">保存</string>
    <string name="分类名称不能为空">分类名称不能为空</string>
    <string name="排序不能为空">排序不能为空</string>
    <string name="修改">修改</string>
    <string name="产品名称">产品名称</string>
    <string name="产品信息">产品信息</string>
    <string name="请输入产品名称">请输入产品名称</string>
    <string name="分类">分类</string>
    <string name="请选择分类">请选择分类</string>
    <string name="规格信息">规格信息</string>
    <string name="添加多规格">添加多规格</string>
    <string name="规格名称">规格名称</string>
    <string name="请输入规格">请输入规格</string>
    <string name="价格">价格(元)</string>
    <string name="请输入价格">请输入价格</string>
    <string name="产品名称不能为空">产品名称不能为空</string>
    <string name="选择分类">选择分类</string>
    <string name="请填写完整规格或价格">请填写完整规格或价格</string>
    <string name="请填写正确的价格">请填写正确的价格</string>
    <string name="保存成功">保存成功</string>
    <string name="添加成功">添加成功</string>
    <string name="是否设置烹饪时的倒计时">是否设置烹饪时的倒计时</string>
    <string name="烹饪时间">烹饪时间</string>
    <string name="请输入时间">请输入分钟数</string>
    <string name="添加">添加</string>
    <string name="请输入规格名称">请输入规格名称</string>
    <string name="请输入烹饪时间">请输入烹饪时间</string>
    <string name="删除成功">删除成功</string>
    <string name="删除产品">删除产品</string>
    <string name="编辑产品">编辑产品</string>
    <string name="待取餐">待取餐</string>
    <string name="已完成">已完成</string>
    <string name="打印">打印</string>
    <string name="订单信息">订单信息</string>
    <string name="确定完成">确定完成</string>
    <string name="创建订单时间">创建订单时间: %s</string>
    <string name="下单时间m">下单时间: %s</string>
    <string name="确认完成">确认完成</string>
    <string name="暂无数据">暂无数据</string>
    <string name="总计m">总计:</string>
    <string name="计时开始">计时开始</string>
    <string name="正在运行">正在运行</string>
    <string name="已选商品">已选商品</string>
    <string name="清空">清空</string>
    <string name="立即登录">立即登录</string>
    <string name="登录享受更多特权">登录享受更多特权</string>

    <string name="欢迎登录">欢迎登录</string>
    <string name="请输入手机号">请输入手机号</string>
    <string name="请输入密码">请输入密码</string>
    <string name="登录">登录</string>
    <string name="验证码登录">验证码登录</string>
    <string name="忘记密码">忘记密码</string>
    <string name="请输入验证码">请输入验证码</string>
    <string name="发送验证码">发送验证码</string>
    <string name="注册">注册</string>
    <string name="请再次输入密码">请再次输入密码</string>
    <string name="账号注册">账号注册</string>
    <string name="还没有账号">还没有账号？去注册一个</string>
    <string name="注册一个">注册一个</string>
    <string name="登录即代表同意">登录即代表同意</string>
    <string name="用户协议">用户协议</string>
    <string name="隐私政策">隐私政策</string>
    <string name="密码必须一致">两次输入密码必须一致</string>
    <string name="用户协议m">《用户协议》</string>
    <string name="隐私政策m">《隐私政策》</string>
    <string name="注册成功">注册成功</string>
    <string name="注册失败">注册失败</string>
    <string name="服务器无响应">服务器无响应</string>
    <string name="登录成功">登录成功</string>
    <string name="请先添加您的菜单分类及菜品">请先添加您的菜单分类及菜品</string>
    <string name="点击添加">点击添加</string>
    <string name="账号已经退出">账号已经退出</string>
    <string name="头像">头像</string>
    <string name="店铺名称">店铺名称</string>
    <string name="联系方式">联系方式</string>
    <string name="店铺简介">店铺简介</string>
    <string name="请输入要修改的内容">请输入要修改的内容</string>
    <string name="修改店铺名">修改店铺名</string>
    <string name="修改描述">修改描述</string>
    <string name="修改手机号">修改手机号</string>
    <string name="请输入正确的手机号">请输入正确的手机号</string>
    <string name="销量">销量</string>
    <string name="昨日">昨日</string>
    <string name="今日">今日</string>
    <string name="授权提示">授权提示</string>
    <string name="权限提示语">您有部分权限没有开启,是否手动开启权限以获取更好的体验？</string>
    <string name="去开启">去开启</string>
    <string name="发现新版本">发现新版本</string>
    <string name="更新失败">更新失败</string>
    <string name="正在下载更新">正在下载更新...</string>
    <string name="本设备不支持蓝牙">本设备不支持蓝牙</string>
    <string name="系统管理员">系统管理员</string>
    <string name="下载">下载</string>
    <string name="暂无消息">暂无消息</string>
    <string name="正在上传">正在上传...</string>
    <string name="历史订单">历史订单</string>
    <string name="按时间筛选">按时间筛选</string>
    <string name="开始时间">开始时间 : </string>
    <string name="结束时间">结束时间 : </string>
    <string name="点击选择开始时间">点击选择开始时间</string>
    <string name="点击选择结束时间">点击选择结束时间</string>
    <string name="清除">清除</string>
    <string name="已经没有更多数据了">已经没有更多数据了...</string>
    <string name="产品图片">产品图片</string>
    <string name="从相册选择上传">从相册选择上传</string>
    <string name="拍照">拍照</string>
    <string name="同意并继续">同意并继续</string>
    <string name="退出">退出</string>
    <string name="用户协议与隐私政策">%s 用户协议与隐私政策</string>
    <string name="隐私协议文本">"以下隐私协议是本软件对用户隐私保护的许诺，请您务必仔细阅读本协议，以了解我们关于管理您个人信息的情况。本隐私协议的全部条款属于本软件用户服务协议的重要部份之一。 为了给您提供更准确、更有针对性的服务，本软件可能会以如下方式，使用您提交的个人信息。但本软件会以高度的勤勉义务对待这些信息，在未征得您许可的情况下，不会将这些信息对外公开或向第三方提供。 一、保有您提供的信息 本软件会在您自愿选择服务或提供信息的情况下收集您的个人信息，并将这些信息进行整合，以便向您提供更好的用户服务。请您在注册时及时、详尽及准确的提供个人资料，并不断更新注册资料，符合及时、详尽准确的要求。所有原始键入的资料将引用为注册资料。如果因注册信息不真实而引起的问题，由您自行承担相应的后果。请您不要将您的帐号、密码转让或出借予他人使用。如您发现您的帐号遭他人非法使用，应立即通知本软件。因黑客行为或用户的保管疏忽导致帐号、密码遭他人非法使用，本软件不承担责任。 二、保有您的使用记录 当您使用本软件的服务时，服务器会自动记录一些信息，包括手机型号、IP地址等。 在如下情况下，本软件会遵照您的意愿或法律的规定披露您的个人信息，由此引发的问题将由您个人承担： （1）事先获得您的授权；  （2）只有透露你的个人资料，才能提供你所要求的产品和服务；  （3）根据有关的法律法规要求；  （4）按照相关政府主管部门的要求； （5）为维护本软件的合法权益。  （6）您同意让第三方共享资料。  （7）我们发现您违反了本软件的服务条款或使用规定。 （8）我们需要向代表我们提供产品或服务的公司提供资料（除非我们另行通知你，否则这些公司无权使用你的身份识别资料）。 三、本《隐私政策》不适用于以下情况： （1）通过我们的服务而接入的第三方服务（包括任何第三方网站）收集的信息。本政策仅适用于我们所收集的信息，并不适用于任何第三方提供的服务或第三方的信息使用规则，我们对任何第三方使用由您提供的信息不承担任何责任； （2）通过在我们服务中进行广告服务的其他公司或机构所收集的信息。 四、隐私权政策的修订  我们可能适时修订本政策的条款，修订政策也是构成本政策的一部分。如修订政策造成您在本政策下权利的实质减少，我们将在修订生效前通过在主页上显著位置提示或向您发送电子邮件或以其他方式通知您。在该种情况下，若您继续使用我们的服务，即表示同意受经修订的本政策的约束。 五、用户如何更正或投诉个人信息 如果您需要查询、修改或更正您的个人信息，或对个人信息保护问题有任何疑问或建议，您可以通过服务支持邮箱：375292577@qq.com 联系我们。 "</string>
    <string name="裁切图片">裁切图片</string>
    <string name="完成">完成</string>
    <string name="请先连接打印机">请先连接打印机</string>
    <string name="连接打印机">连接打印机</string>
    <string name="开始搜索">开始搜索</string>
    <string name="搜索结束">搜索结束</string>
    <string name="正在搜索">正在搜索...</string>
    <string name="去首页">去首页</string>
    <string name="好的">好的</string>
    <string name="打印机设置">打印机设置</string>
    <string name="身份认证已过期">身份认证已过期，请重新登录</string>

    <string name="目前难度">目前难度</string>
    <string name="总共单词">总共单词</string>
    <string name="已背单词">已背单词</string>
    <string name="当日未学">当日未学</string>
    <string name="需复习">需复习</string>
    <string name="开始背词">开始背词</string>
    <string name="单词挑战">单词挑战</string>
    <string name="搜索单词">搜索单词</string>
    <string name="单词复习">单词复习</string>
    <string name="背单词">背单词</string>


    <string name="账户名已存在">账户名已存在</string>
    <string name="账户名不存在或密码错误">账户名不存在或密码错误</string>
    <string name="词库">词库</string>
    <string name="复习">复习</string>
    <string name="背词">背词</string>
    <string name="挑战">挑战</string>
    <string name="单词挑战介绍">单词挑战功能规则：系统依次给出100个单词，每次展示一个单词及四个选项及单词发音，用户需在15秒内选择正确答案，如选择错误，则挑战结束，选择完成之后记录单次最高挑战成绩，每个单词1分 共100分。</string>
    <string name="历史最高成绩">历史最高成绩</string>
    <string name="上次最高成绩">上次最高成绩</string>
    <string name="开始挑战">开始挑战</string>
    <string name="恭喜您再创新高">恭喜您再创新高</string>
    <string name="账户不存在">账户不存在</string>
    <string name="更新密码成功">更新密码成功</string>
    <string name="更新密码失败">更新密码失败</string>

    <string name="关于作者">本软件由1800300404蒙素靓进行制作，仅供学习交流使用，如有需要请联系作者本人，QQ：2504773400。</string>


</resources>
