<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_shape_white"
    android:paddingTop="@dimen/dp_30"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/下单成功"
        android:gravity="center"
        android:textSize="@dimen/font_size_16"
        android:textColor="@color/color_000000"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/打印提示"
        android:gravity="center"
        android:textSize="@dimen/font_size_14"
        android:textColor="@color/color_666666"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_03"
        android:background="@color/color_cccccc"
        android:layout_marginTop="@dimen/dp_50"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/dp_50"
            android:text="@string/好的"
            android:gravity="center"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/color_666666"/>

        <View
            android:layout_width="@dimen/dp_03"
            android:layout_height="match_parent"
            android:background="@color/color_cccccc"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/dp_50"
            android:text="@string/去首页"
            android:gravity="center"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/color_1abc9c"/>
    </LinearLayout>



</LinearLayout>