<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_50"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/标题"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/font_size_16" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_back"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_left_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/iv_back"
        android:text="@string/确认订单"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/font_size_16"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_right_title"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/保存"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/font_size_16"
        android:visibility="gone" />


</RelativeLayout>