<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_12"
        android:elevation="@dimen/dp_16"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_24"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/b_text_bold_style"
                    android:text="@string/目前难度" />

                <TextView
                    android:id="@+id/tv_difficalt"
                    style="@style/b_text_bold_style"
                    android:layout_marginLeft="@dimen/dp_12"
                    tools:text="CET4" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/main_color_sconde" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_24"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/desc_text_style"
                        android:text="@string/总共单词" />

                    <TextView
                        android:id="@+id/tv_totalNum"
                        style="@style/s_text_style"
                        android:layout_marginLeft="@dimen/dp_12"
                        tools:text="3000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">




                    <TextView
                        style="@style/desc_text_style"
                        android:text="@string/已背单词" />

                    <TextView
                        android:id="@+id/tv_hasBack"
                        style="@style/s_text_style"
                        android:layout_marginLeft="@dimen/dp_12"
                        tools:text="3000" />

                </LinearLayout>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_48"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        style="@style/s_text_style"
                        android:text="@string/当日未学" />

                    <TextView
                        android:id="@+id/tv_nostudy"
                        style="@style/xxxb_text_bold_style"
                        android:layout_marginTop="@dimen/dp_8"
                        tools:text="3000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/dp_48">
                    <TextView
                        style="@style/s_text_style"
                        android:text="@string/需复习" />

                    <TextView
                        android:id="@+id/tv_needreview"
                        style="@style/xxxb_text_bold_style"
                        android:layout_marginTop="@dimen/dp_8"
                        tools:text="3000" />
                </LinearLayout>


            </LinearLayout>




        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btn_start"
        app:layout_constraintTop_toBottomOf="@+id/card_today"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_48"
        android:layout_marginHorizontal="@dimen/dp_12"
        style="@style/s_btn_style"
        android:textStyle="bold"
        android:text="@string/开始背词"/>

    <ImageView
        android:id="@+id/home_page"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/icon1">
    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>