<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_12"
        android:elevation="@dimen/dp_16"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_24"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/b_text_bold_style"
                    android:text="单词挑战" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/main_color_sconde" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_24"
                android:gravity="center_vertical">

                <TextView
                    style="@style/desc_text_style"
                    android:text="@string/单词挑战介绍"
                    android:layout_width="match_parent"
                    />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/ll_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_48"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        style="@style/s_text_style"
                        android:text="@string/历史最高成绩" />

                    <TextView
                        android:id="@+id/tv_maxscore"
                        style="@style/xxxb_text_bold_style"
                        android:layout_marginTop="@dimen/dp_8"
                        android:text="92" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/dp_48">
                    <TextView
                        style="@style/s_text_style"
                        android:text="@string/上次最高成绩" />

                    <TextView
                        android:id="@+id/tv_prescore"
                        style="@style/xxxb_text_bold_style"
                        android:layout_marginTop="@dimen/dp_8"
                        android:text="85" />
                </LinearLayout>


            </LinearLayout>




        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btn_start"
        app:layout_constraintTop_toBottomOf="@+id/card_today"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_48"
        android:layout_marginHorizontal="@dimen/dp_12"
        style="@style/s_btn_style"
        android:textStyle="bold"
        android:text="@string/开始挑战"/>

    <ImageView
        android:id="@+id/challenge_page"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/icon2">
    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>